<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleCastPlayer</string>
    <string name="select_media">Select Media&#8230;</string>
    <string name="select_tracks">Select Tracks&#8230;</string>
    <string name="load_media">Load Media</string>
    <string name="load_queue">Load Queue&#8230;</string>
    <string name="insert_queue">Insert&#8230;</string>
    <string name="update_queue">Update&#8230;</string>
    <string name="remove_queue">Remove&#8230;</string>
    <string name="queue_jump">Jump</string>
    <string name="queue_prev">Prev</string>
    <string name="queue_next">Next</string>
    <string name="queue_insert_and_play_item">Insert and Play...</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="attach_to_session">Attach to Session</string>
    <string name="scan_failed_network_error">Unable to scan for devices. Check your network settings.</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_device">(No Device Selected)</string>
    <string name="error">Error</string>
    <string name="launch_app">Launch App</string>
    <string name="join_app">Join App</string>
    <string name="leave_app">Leave App</string>
    <string name="stop_app">Stop App</string>
    <string name="start_session">Start Session</string>
    <string name="end_session">End Session</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="no_time">--:--</string>
    <string name="select_mode">Select a mode:</string>
    <string name="select_notifications_mode">Select alert type(s):</string>
    <string name="sdk_mode_button">Cast SDK Mode</string>
    <string name="mrp_mode_button">MediaRouter Mode</string>
    <string name="mrp_request_failed">The MediaRoute request has failed.</string>
    <string name="device_volume">Device Vol:</string>
    <string name="stream_volume">Stream Vol:</string>
    <string name="mute">Mute</string>
    <string name="select_media_title">Select Media</string>
    <string name="select_tracks_title">Select Media Tracks</string>
    <string name="media_art_description">Image that represents the currently playing media</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="list_empty">No items available</string>
    <string name="after_seek">After seeking:</string>
    <string name="autoplay">Autoplay</string>
    <string name="auto_play">Auto Play</string>
    <string name="status_app_disconnected">Connection to receiver application has closed.</string>
    <string name="action_settings">Settings</string>
    <string name="action_wifi_settings">Wi-Fi Settings</string>
    <string name="action_accessibility_settings">Accessibility Settings</string>
    <string name="action_locale_settings">Language Settings</string>
    <string name="default_receiver_app_name">Default media receiver</string>
    <string name="edit_queue_item_activity_title">Edit Item</string>
    <string name="edit_queue_item_activity_item_id_title">Item ID</string>
    <string name="edit_queue_item_activity_start_time_title">Start Time</string>
    <string name="edit_queue_item_activity_preload_time_title">Preload Time</string>
    <string name="edit_queue_item_activity_playback_duration_title">Playback Duration</string>
    <string name="start_time_title">Start Time</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="enter_preload_time">Enter Preload Time</string>
    <string name="enter_playback_duration">Enter Playback Duration</string>
    <string name="media_queue_title">Media Queue</string>
    <string name="add_new_item">Add new item</string>
    <string name="unsupported_item">Unsupported item</string>
    <string name="queue_load_activity_title">Load Queue</string>
    <string name="queue_insert_activity_title">Insert Items Into Queue</string>
    <string name="queue_jump_activity_title">Jump to Item</string>
    <string name="queue_update_activity_title">Update Queue</string>
    <string name="queue_remove_activity_title">Remove Items From Queue</string>
    <string name="queue_insert_and_play_item_activity_title">Insert and Play Item</string>
    <string name="queue_activity_title">Modify Queue</string>

    <string-array name="seek_behaviors">
        <item>Do Nothing</item>
        <item>Play</item>
        <item>Pause</item>
    </string-array>

    <string-array name="repeat_mode">
        <item>No Repeat</item>
        <item>Repeat</item>
        <item>Repeat Single Item</item>
        <item>Repeat And Shuffle</item>
    </string-array>

    <!-- Application preferences -->
    <string name="media_list_url"></string>
    <string name="media_list_url_pref">Media list URL</string>
    <string name="summary_media_list_url_pref">Specify the URL from which the media list should be downloaded.</string>
    <string name="dialog_title_media_list_url_pref">Enter the media list URL:</string>

    <string name="receiver_application_id_pref">Receiver application ID</string>
    <string name="summary_receiver_application_id_pref">Specify the receiver application ID.</string>
    <string name="dialog_title_receiver_application_id_pref">Select the receiver application ID:</string>

    <string name="additional_receiver_apps"></string>
    <string name="dialog_title_additional_receiver_apps_pref">Modify additional receiver applications</string>
    <string name="summary_additional_receiver_apps_pref">Comma separated list of "id:name"</string>
    <string name="additional_receiver_apps_pref">Additional receiver applications</string>

    <string name="relaunch_app_pref">Always relaunch receiver app</string>
    <string name="summary_relaunch_app_pref">If checked, launch always relaunches; otherwise, it tries to join first.</string>

    <string name="stop_app_pref">Stop receiver app when ending session</string>
    <string name="summary_stop_app_pref">If checked, ending a session will terminate the receiver application.</string>

    <string name="timeout_interval_pref">Timeout interval</string>
    <string name="summary_timeout_interval_pref">The connection inactivity timeout, in seconds.</string>

    <!-- Media operations. -->
    <string name="mediaop_load">load</string>
    <string name="mediaop_seek">seek</string>
    <string name="mediaop_pause">pause</string>
    <string name="mediaop_play">play</string>
    <string name="mediaop_stop">stop</string>
    <string name="mediaop_set_stream_volume">set stream volume</string>
    <string name="mediaop_toggle_stream_mute">toggle stream mute</string>
    <string name="mediaop_set_active_media_tracks">set active media tracks</string>
    <string name="mediaop_set_text_track_style">set text track style</string>
    <string name="mediaop_queue_load">Queue Load</string>
    <string name="mediaop_queue_insert">Queue Insert</string>
    <string name="mediaop_queue_jump">Queue Jump</string>
    <string name="mediaop_queue_update">Queue Update</string>
    <string name="mediaop_queue_remove">Queue Remove</string>
    <string name="mediaop_queue_prev">Queue Prev</string>
    <string name="mediaop_queue_next">Queue Next</string>
    <string name="mediaop_queue_insert_and_play_item">Insert and play item</string>
    <string name="mediaop_set_repeat_mode">Set Repeat Mode</string>

    <!-- Error messages. -->
    <string name="error_load_media_failed">Failed to load the media.</string>
    <string name="error_no_controller">Unable to acquire controller.</string>
    <string name="error_no_device_connection">Unable to connect to device (%1$d: %2$s).</string>
    <string name="error_lost_device_connection">Lost connection to device.</string>
    <string name="error_app_launch_failed">Unable to launch application.</string>
    <string name="error_app_join_failed">Unable to join application.</string>
    <string name="error_app_leave_failed">Unable to leave application.</string>
    <string name="error_app_stop_failed">Unable to stop application.</string>
    <string name="error_operation_failed">Operation \'%1$s\' failed.</string>

</resources>
