<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_wifi_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_wifi_settings"/>

    <item
        android:id="@+id/action_accessibility_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_accessibility_settings"/>

    <item
        android:id="@+id/action_locale_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_locale_settings"/>

</menu>
