<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle" >

    <include
        layout="@android:layout/two_line_list_item"
        android:id="@+id/item_id_row"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/auto_play_title"
            android:text="@string/auto_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <CheckBox
            android:id="@+id/auto_play_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <include
        layout="@android:layout/two_line_list_item"
        android:id="@+id/start_time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <include
        layout="@android:layout/two_line_list_item"
        android:id="@+id/preload_time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <include
        layout="@android:layout/two_line_list_item"
        android:id="@+id/playback_duration_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <include
        layout="@android:layout/two_line_list_item"
        android:id="@+id/active_track_ids_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/control_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>
